--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
+    width: 100%;
 
     > * {
         flex: 0 0 auto;
