--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -5,6 +5,7 @@
     background-color: transparent;
     color: $color-white;
     font-size: 1.6rem;
+    padding: 0em 2em;
 
     box-shadow: none;
 
